source/sass/blocks/how-to.scss
.how-to {
  padding-bottom: 50px;
  color: $bg-white;
  background-color: $bg-black;
}

.how-to__title {
  margin: 0;
  margin-bottom: 25px;
  padding-top: 90px;
  font-size: 50px;
  line-height: 40px;
  text-align: center;
  font-family: 'Kudryashev', 'Arial', sans-serif;
  font-weight: 600;
}

.how-to__title--brunette {
  padding-top: 215px;
}

.how-to__list {
  // border: 1px solid oldlace;
  margin: 0;
  padding: 0;
  list-style: none;

  display: flex;
  justify-content: space-between;
}

.how-to__list--brunette {
  padding: 0 60px 0 80px;
}

.how-to__item {
  // border: 1px solid oldlace;
  position: relative;
  width: 200px;
}

.how-to__item--brunette {
  width: 220px;
}

.how-to__item::before {
  position: absolute;
  top: 5px;
  left: 5px;
  width: 25px;
  height: 25px;
  font-size: 18px;
  line-height: 25px;
  font-weight: 600;
  text-align: center;
  color: $bg-black;
  background-color: $bg-white;
  background-position: 0 0;
  background-repeat: no-repeat;
  border-radius: 50%;
}

.how-to__item--1::before {
  content: '1';
}

.how-to__item--2::before {
  content: '2';
}

.how-to__item--3::before {
  content: '3';
}

.how-to__item--blonde-satin::after {
  content: 'Satin';
  top: 140px;
  left: -10px;
  position: absolute;
  padding: 3px 8px 6px 8px;
  font-size: 27px;
  font-weight: 600;
  color: $bg-black;
  background-color: $bg-white;
}

.how-to__item--brunette-lacquer::after {
  content: 'Lacquer';
  top: 140px;
  right: -40px;
  position: absolute;
  padding: 3px 8px 6px 8px;
  font-size: 27px;
  font-weight: 600;
  color: $bg-black;
  background-color: $bg-white;
}

.how-to__item--red-vinil::after {
  content: 'Vinil';
  top: 160px;
  left: 10px;
  position: absolute;
  padding: 3px 8px 6px 8px;
  font-size: 27px;
  font-weight: 600;
  color: $bg-black;
  background-color: $bg-white;
}

.how-to__description {
  // border: 1px solid oldlace;
  margin: 0;
  margin-top: 15px;
  font-size: 17px;
  line-height: 25px;
}

.how-to__description--brunette {
  margin-top: 25px;
}

@media (min-width: $desktop-width) {
  .how-to__wrap {
    margin: 0 auto;
    width: 780px;
  }

  .how-to__wrap--brunette {
    margin: 0 auto;
    width: 500px;
    transform: translateX(-280px);
  }

  .how-to__title {
    margin-bottom: 40px;
    padding-top: 20px;
    text-align: left;
  }

  .how-to__list--brunette {
    padding: 0;
  }

  .how-to__item {
    width: 220px;
  }

  .how-to__item::before {
    top: 0;
    left: -40px;
  }

  .how-to__item--blonde-satin::after {
    top: 80px;
    left: auto;
    right: -60px;
  }

  .how-to__item--brunette-lacquer::after {
    top: 130px;
    left: auto;
    right: -75px;
  }

  .how-to__item--red-vinil::after {
    top: 140px;
    left: auto;
    right: -45px;
  }

  .how-to__description {
    font-size: 18px;
  }
}

